Fix gap on right of nav bar - override .container fluid styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,13 @@ body {
 
 /* Containers */
 
+.container-fluid {
+    width: 100%;
+    padding: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .two-column {
     flex: 1;
     text-align: justify;
@@ -102,7 +109,7 @@ body {
     font-size: 1.25rem;
     color: #000;
 
-    justify-content: center;
+    justify-content: space-around;
     align-content: center;
 }
 
